--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,62 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>PhotoBooth</title>
-</head>
-<body>
-	
-<script type="text/javascript">
 
-/* Copyright (C) 2007 Richard Atterer, richard©atterer.net
-   This program is free software; you can redistribute it and/or modify it
-   under the terms of the GNU General Public License, version 2. See the file
-   COPYING for details. */
+  <head>
+  	<meta charset="UTF-8">
+  	<title>PhotoBooth</title>
+      {# // <script src="/public/js/mjpeg.js"></script> #}
+      <link rel="stylesheet" href="public/css/main.css">
+  </head>
 
-var imageNr = 0; // Serial number of current image
-var finished = new Array(); // References to img objects which have finished downloading
-var paused = false;
+  <body onload="createImageLayer();">
+    <input type="button" onclick="setCountDown(5)" value="Photo" id="ctdStart">
+    <div id="content">
+      <h1 id="countdown"></h1>
+      {# <div id="webcam"><noscript><img src="http://127.0.0.1:9000?action=snapshot" /></noscript></div> #}
+      <div id="webcam">
+        <img id="stream" src="http://{{ serverUrl }}:9000?action=stream" alt="">
+      </div>
+    </div>
 
-function createImageLayer() {
-  var img = new Image();
-  img.style.position = "absolute";
-  img.style.zIndex = -1;
-  img.onload = imageOnload;
-  img.onclick = imageOnclick;
-  img.src = "http://192.168.0.17:9000?action=snapshot&n=" + (++imageNr);
-  var webcam = document.getElementById("webcam");
-  webcam.insertBefore(img, webcam.firstChild);
-}
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/public/js/client.js"></script>
+    
+  </body>
 
-// Two layers are always present (except at the very beginning), to avoid flicker
-function imageOnload() {
-  this.style.zIndex = imageNr; // Image finished, bring to front!
-  while (1 < finished.length) {
-    var del = finished.shift(); // Delete old image(s) from document
-    del.parentNode.removeChild(del);
-  }
-  finished.push(this);
-  if (!paused) createImageLayer();
-}
-
-function imageOnclick() { // Clicking on the image will pause the stream
-  paused = !paused;
-  if (!paused) createImageLayer();
-}
-
-</script>
-<body onload="createImageLayer();">
-
-<div id="webcam"><noscript><img src="http://192.168.0.17:9000?action=snapshot" /></noscript></div>
-
-
-<script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io.connect('http://192.168.0.17:8080');
-  socket.on('photo', function (data) {
-    console.log("photo !");
-    console.log(data.test);
-  });
-</script>
-</body>
 </html>
